fixed time calulation, started REM TextView

--- a/app/src/main/res/layout/activity_user_data_input.xml
+++ b/app/src/main/res/layout/activity_user_data_input.xml
@@ -15,6 +15,7 @@
         android:onClick="setTime"
         android:text="@string/time_save" />
 
+
     <TimePicker
         android:id="@+id/timePicker1"
         android:layout_width="wrap_content"
@@ -22,9 +23,9 @@
         android:layout_above="@+id/set_button"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginTop="2dp"
-        android:layout_marginBottom="112dp" />
-
+        android:layout_marginStart="2dp"
+        android:layout_marginTop="0dp"
+        android:layout_marginBottom="114dp" />
 
     <TextView
         android:id="@+id/textView3"
@@ -45,8 +46,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/textView3"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="-26dp"
+        android:layout_marginStart="174dp"
+        android:layout_marginLeft="174dp"
+        android:layout_marginTop="-22dp"
         android:text="@string/time_selected"
         android:textAppearance="?android:attr/textAppearanceMedium" />
 
@@ -73,7 +78,8 @@
         android:layout_marginStart="25dp"
         android:layout_marginLeft="25dp"
         android:layout_marginBottom="28dp"
-        android:text="Current Time" />
+        android:text="Current Time"
+        android:visibility="invisible"/>
 
     <TextView
         android:id="@+id/timeSleep"
@@ -83,8 +89,8 @@
         android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginEnd="196dp"
-        android:layout_marginRight="196dp"
+        android:layout_marginEnd="171dp"
+        android:layout_marginRight="171dp"
         android:layout_marginBottom="160dp"
         android:text="0 : 00"
         android:textAppearance="?android:attr/textAppearanceMedium" />
@@ -103,5 +109,33 @@
         android:layout_marginBottom="158dp"
         android:text="Time Sleeping:"
         android:textAppearance="?android:attr/textAppearanceMedium" />
+
+    <TextView
+        android:id="@+id/textView6"
+        android:layout_width="111dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="9dp"
+        android:layout_marginEnd="291dp"
+        android:layout_marginRight="291dp"
+        android:layout_marginBottom="118dp"
+        android:text="REM Cycles:"
+        android:textAppearance="?android:attr/textAppearanceMedium" />
+
+    <TextView
+        android:id="@+id/remCyclesCount"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginEnd="168dp"
+        android:layout_marginRight="168dp"
+        android:layout_marginBottom="123dp"
+        android:text="TextView" />
 
 </RelativeLayout>
